[package]
description = " Netfilter NFQUEUE high-level bindings"
license = "GPL-2.0+"
keywords = ["netfilter","queue","nfqueue"]
homepage = "https://github.com/chifflier/nfqueue-rs"
repository = "https://github.com/chifflier/nfqueue-rs.git"

name = "nfqueue"
version = "0.9.0"
authors = [ "Pierre Chifflier <chifflier@wzdftpd.net>" ]

[dependencies]
libc = "^0.2"

[dev_dependencies]
pnet = "0.17.1"
